asuaParser.py
# Generated from asua.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class asuaParser ( Parser ):

    grammarFileName = "asua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "';'", "'log'", "'('", "')'", 
                     "'='", "'-'", "'+'", "'*'", "'/'", "'%'", "'>'", "'<'", 
                     "'>='", "'<='", "'=='", "'!='", "'sqrt'", "'pow'", 
                     "','", "'sin'", "'cos'", "'tan'", "'abs'", "'pi'", 
                     "'e'", "'True'", "'False'", "'['", "']'", "'array'", 
                     "'transpose'", "'inverse'", "'if'", "'{'", "'}'", "'else'", 
                     "'for'", "'while'", "'def'", "'return'", "'plot'", 
                     "'plotPrimes'", "'readFile'", "'writeFile'", "'kMeansOperation'", 
                     "'linearRegression'", "'regress'", "'mlp'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NUMBER", "ID", "STRING", 
                      "WS", "COMMENT" ]

    RULE_program = 0
    RULE_importStatement = 1
    RULE_statement = 2
    RULE_logStatement = 3
    RULE_assignment = 4
    RULE_expr = 5
    RULE_list = 6
    RULE_array = 7
    RULE_accessArray = 8
    RULE_matrix = 9
    RULE_row = 10
    RULE_matrixOperation = 11
    RULE_conditional = 12
    RULE_loop = 13
    RULE_parameters = 14
    RULE_arguments = 15
    RULE_functionDef = 16
    RULE_functionCall = 17
    RULE_returnStatement = 18
    RULE_graph = 19
    RULE_primeGraph = 20
    RULE_rangeStart = 21
    RULE_rangeEnd = 22
    RULE_step = 23
    RULE_fileOperation = 24
    RULE_kMeansOperation = 25
    RULE_regressionOperation = 26
    RULE_mlpOperation = 27

    ruleNames =  [ "program", "importStatement", "statement", "logStatement", 
                   "assignment", "expr", "list", "array", "accessArray", 
                   "matrix", "row", "matrixOperation", "conditional", "loop", 
                   "parameters", "arguments", "functionDef", "functionCall", 
                   "returnStatement", "graph", "primeGraph", "rangeStart", 
                   "rangeEnd", "step", "fileOperation", "kMeansOperation", 
                   "regressionOperation", "mlpOperation" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    NUMBER=50
    ID=51
    STRING=52
    WS=53
    COMMENT=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(asuaParser.EOF, 0)

        def importStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asuaParser.ImportStatementContext)
            else:
                return self.getTypedRuleContext(asuaParser.ImportStatementContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asuaParser.StatementContext)
            else:
                return self.getTypedRuleContext(asuaParser.StatementContext,i)


        def getRuleIndex(self):
            return asuaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = asuaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 56
                self.importStatement()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3095969193263112) != 0):
                self.state = 62
                self.statement()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(asuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(asuaParser.ID, 0)

        def getRuleIndex(self):
            return asuaParser.RULE_importStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = asuaParser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(asuaParser.T__0)
            self.state = 71
            self.match(asuaParser.ID)
            self.state = 72
            self.match(asuaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(asuaParser.AssignmentContext,0)


        def logStatement(self):
            return self.getTypedRuleContext(asuaParser.LogStatementContext,0)


        def conditional(self):
            return self.getTypedRuleContext(asuaParser.ConditionalContext,0)


        def loop(self):
            return self.getTypedRuleContext(asuaParser.LoopContext,0)


        def graph(self):
            return self.getTypedRuleContext(asuaParser.GraphContext,0)


        def primeGraph(self):
            return self.getTypedRuleContext(asuaParser.PrimeGraphContext,0)


        def array(self):
            return self.getTypedRuleContext(asuaParser.ArrayContext,0)


        def fileOperation(self):
            return self.getTypedRuleContext(asuaParser.FileOperationContext,0)


        def kMeansOperation(self):
            return self.getTypedRuleContext(asuaParser.KMeansOperationContext,0)


        def regressionOperation(self):
            return self.getTypedRuleContext(asuaParser.RegressionOperationContext,0)


        def mlpOperation(self):
            return self.getTypedRuleContext(asuaParser.MlpOperationContext,0)


        def functionDef(self):
            return self.getTypedRuleContext(asuaParser.FunctionDefContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(asuaParser.FunctionCallContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(asuaParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return asuaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = asuaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.logStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.conditional()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 77
                self.loop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 78
                self.graph()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 79
                self.primeGraph()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 80
                self.array()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 81
                self.fileOperation()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 82
                self.kMeansOperation()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 83
                self.regressionOperation()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 84
                self.mlpOperation()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 85
                self.functionDef()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 86
                self.functionCall()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 87
                self.returnStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(asuaParser.ExprContext,0)


        def getRuleIndex(self):
            return asuaParser.RULE_logStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogStatement" ):
                listener.enterLogStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogStatement" ):
                listener.exitLogStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogStatement" ):
                return visitor.visitLogStatement(self)
            else:
                return visitor.visitChildren(self)




    def logStatement(self):

        localctx = asuaParser.LogStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_logStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(asuaParser.T__2)
            self.state = 91
            self.match(asuaParser.T__3)
            self.state = 92
            self.expr(0)
            self.state = 93
            self.match(asuaParser.T__4)
            self.state = 94
            self.match(asuaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(asuaParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(asuaParser.ExprContext,0)


        def matrixOperation(self):
            return self.getTypedRuleContext(asuaParser.MatrixOperationContext,0)


        def getRuleIndex(self):
            return asuaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = asuaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(asuaParser.ID)
            self.state = 97
            self.match(asuaParser.T__5)
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 7, 8, 18, 19, 21, 22, 23, 24, 25, 26, 27, 28, 29, 50, 51, 52]:
                self.state = 98
                self.expr(0)
                pass
            elif token in [32, 33]:
                self.state = 99
                self.matrixOperation()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asuaParser.ExprContext)
            else:
                return self.getTypedRuleContext(asuaParser.ExprContext,i)


        def ID(self):
            return self.getToken(asuaParser.ID, 0)

        def arguments(self):
            return self.getTypedRuleContext(asuaParser.ArgumentsContext,0)


        def NUMBER(self):
            return self.getToken(asuaParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(asuaParser.STRING, 0)

        def matrix(self):
            return self.getTypedRuleContext(asuaParser.MatrixContext,0)


        def getRuleIndex(self):
            return asuaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = asuaParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 103
                self.match(asuaParser.T__6)
                self.state = 104
                self.expr(20)
                pass

            elif la_ == 2:
                self.state = 105
                self.match(asuaParser.T__7)
                self.state = 106
                self.expr(19)
                pass

            elif la_ == 3:
                self.state = 107
                self.match(asuaParser.T__3)
                self.state = 108
                self.expr(0)
                self.state = 109
                self.match(asuaParser.T__4)
                pass

            elif la_ == 4:
                self.state = 111
                self.match(asuaParser.ID)
                self.state = 112
                self.match(asuaParser.T__3)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7881300420329872) != 0):
                    self.state = 113
                    self.arguments()


                self.state = 116
                self.match(asuaParser.T__4)
                pass

            elif la_ == 5:
                self.state = 117
                self.match(asuaParser.T__17)
                self.state = 118
                self.match(asuaParser.T__3)
                self.state = 119
                self.expr(0)
                self.state = 120
                self.match(asuaParser.T__4)
                pass

            elif la_ == 6:
                self.state = 122
                self.match(asuaParser.T__18)
                self.state = 123
                self.match(asuaParser.T__3)
                self.state = 124
                self.expr(0)
                self.state = 125
                self.match(asuaParser.T__19)
                self.state = 126
                self.expr(0)
                self.state = 127
                self.match(asuaParser.T__4)
                pass

            elif la_ == 7:
                self.state = 129
                self.match(asuaParser.T__20)
                self.state = 130
                self.match(asuaParser.T__3)
                self.state = 131
                self.expr(0)
                self.state = 132
                self.match(asuaParser.T__4)
                pass

            elif la_ == 8:
                self.state = 134
                self.match(asuaParser.T__21)
                self.state = 135
                self.match(asuaParser.T__3)
                self.state = 136
                self.expr(0)
                self.state = 137
                self.match(asuaParser.T__4)
                pass

            elif la_ == 9:
                self.state = 139
                self.match(asuaParser.T__22)
                self.state = 140
                self.match(asuaParser.T__3)
                self.state = 141
                self.expr(0)
                self.state = 142
                self.match(asuaParser.T__4)
                pass

            elif la_ == 10:
                self.state = 144
                self.match(asuaParser.T__23)
                self.state = 145
                self.match(asuaParser.T__3)
                self.state = 146
                self.expr(0)
                self.state = 147
                self.match(asuaParser.T__4)
                pass

            elif la_ == 11:
                self.state = 149
                self.match(asuaParser.T__24)
                pass

            elif la_ == 12:
                self.state = 150
                self.match(asuaParser.T__25)
                pass

            elif la_ == 13:
                self.state = 151
                self.match(asuaParser.NUMBER)
                pass

            elif la_ == 14:
                self.state = 152
                self.match(asuaParser.ID)
                pass

            elif la_ == 15:
                self.state = 153
                self.match(asuaParser.STRING)
                pass

            elif la_ == 16:
                self.state = 154
                self.matrix()
                pass

            elif la_ == 17:
                self.state = 155
                self.match(asuaParser.T__26)
                pass

            elif la_ == 18:
                self.state = 156
                self.match(asuaParser.T__27)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 167
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 165
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = asuaParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 159
                        if not self.precpred(self._ctx, 18):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 18)")
                        self.state = 160
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3968) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 161
                        self.expr(19)
                        pass

                    elif la_ == 2:
                        localctx = asuaParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 162
                        if not self.precpred(self._ctx, 17):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 17)")
                        self.state = 163
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 258048) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 164
                        self.expr(18)
                        pass

             
                self.state = 169
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asuaParser.ExprContext)
            else:
                return self.getTypedRuleContext(asuaParser.ExprContext,i)


        def getRuleIndex(self):
            return asuaParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = asuaParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(asuaParser.T__28)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7881300420329872) != 0):
                self.state = 171
                self.expr(0)
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 172
                    self.match(asuaParser.T__19)
                    self.state = 173
                    self.expr(0)
                    self.state = 178
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 181
            self.match(asuaParser.T__29)
            self.state = 182
            self.match(asuaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(asuaParser.ID, 0)

        def NUMBER(self):
            return self.getToken(asuaParser.NUMBER, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asuaParser.ExprContext)
            else:
                return self.getTypedRuleContext(asuaParser.ExprContext,i)


        def getRuleIndex(self):
            return asuaParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = asuaParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(asuaParser.T__30)
            self.state = 185
            self.match(asuaParser.ID)
            self.state = 186
            self.match(asuaParser.T__28)
            self.state = 187
            self.match(asuaParser.NUMBER)
            self.state = 188
            self.match(asuaParser.T__29)
            self.state = 189
            self.match(asuaParser.T__5)
            self.state = 190
            self.match(asuaParser.T__28)
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7881300420329872) != 0):
                self.state = 191
                self.expr(0)
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 192
                    self.match(asuaParser.T__19)
                    self.state = 193
                    self.expr(0)
                    self.state = 198
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 201
            self.match(asuaParser.T__29)
            self.state = 202
            self.match(asuaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(asuaParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(asuaParser.ExprContext,0)


        def getRuleIndex(self):
            return asuaParser.RULE_accessArray

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessArray" ):
                listener.enterAccessArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessArray" ):
                listener.exitAccessArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccessArray" ):
                return visitor.visitAccessArray(self)
            else:
                return visitor.visitChildren(self)




    def accessArray(self):

        localctx = asuaParser.AccessArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_accessArray)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self.match(asuaParser.ID)
            self.state = 205
            self.match(asuaParser.T__28)
            self.state = 206
            self.expr(0)
            self.state = 207
            self.match(asuaParser.T__29)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def row(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asuaParser.RowContext)
            else:
                return self.getTypedRuleContext(asuaParser.RowContext,i)


        def getRuleIndex(self):
            return asuaParser.RULE_matrix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrix" ):
                listener.enterMatrix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrix" ):
                listener.exitMatrix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrix" ):
                return visitor.visitMatrix(self)
            else:
                return visitor.visitChildren(self)




    def matrix(self):

        localctx = asuaParser.MatrixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_matrix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self.match(asuaParser.T__28)
            self.state = 210
            self.row()
            self.state = 215
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 211
                self.match(asuaParser.T__19)
                self.state = 212
                self.row()
                self.state = 217
                self._errHandler.sync(self)
                _la = self._input.LA(1)
